--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,1 @@
-<h2><%= @post.title %></h2>
-<h3>Written on: <%= @post.written_at %></h3>
-
-<%= simple_format @post.content %>
+<%= render partial: "post", object: @post %>
