--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,5 +1,5 @@
 <div class="post">
-  <h2><%= post.title %></h2>
+  <h2><%= link_to_unless_current post.title, post_path(post) %></h2>
   <h3>Written on: <%= post.written_at %></h3>
 
   <%= simple_format(post.content) %>
