Add new post page.

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,5 @@
+<%= link_to "Add New Post", posts_new_path  %>
+
 <div class="posts">
   <% @posts.each do |post| %>
     <%= render partial: "post", object: post %>
