still stuck on unterminated string meets end of file syntax error, unexpected end-of-input, expecting )  error msg.

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,7 @@
 <%= render partial: "post", object: @post %>
 
 <%= link_to "Post Index", posts_path %>
+
+<%= link_to "Edit Post”, edit_post_path (@post) %>
+
+
