--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,6 +2,7 @@
 
 <div class="posts">
   <% @posts.each do |post| %>
-    <%= render partial: "post", object: post %>
+    <!-- <%= render partial: "post", object: cookie %> -->
+    <%= render partial: "post", locals: { post: post } %>
   <% end %>
 </div>
