--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -7,4 +7,7 @@
 
 <div class="post-nav">
   <%= link_to "Edit Post", post_edit_path(post) %>
+  <%= link_to "Delete Post", post_path(post),
+      method: :delete,
+      data: { confirm: "Are you sure you want to delete this beautiful piece of writing?"} %>
 </div>
