--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,21 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+  <div class="container">
+    <div class="row">
+      <h1> Welcome to my beautiful internet thing </h1>
+    </div>
+    <div class="row">
+      <div class="sidebar col-xs-2">
+        <ul class="list-unstyled">
+          <li><%= link_to "Blarg", posts_path, class: 'btn btn-info' %></li>
+          <li><%= link_to "Add New Post", posts_new_path, class: 'btn btn-success' %></li>
+        </ul>
+      </div>
+      <div class="main-content col-xs-10">
+        <%= yield %>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
