--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,8 @@
 <%= render partial: "post", object: @post %>
 
-<%= link_to "Post Index", posts_path %>
+<div class="post-nav">
+  <%= link_to "Edit Post", post_edit_path(@post), class: 'btn btn-info' %>
+  <%= link_to "Delete Post", post_path(@post), class: 'btn btn-danger',
+      method: :delete,
+      data: { confirm: "Are you sure you want to delete this beautiful piece of writing?"} %>
+</div>
