Add basic devise installation.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
   <div class="container">
     <div class="row">
       <h1> Welcome to my beautiful internet thing </h1>
+      <p class="notice"><%= flash[:notice] %></p>
+      <p class="alert"><%= flash[:alert] %></p>
     </div>
     <div class="row">
       <div class="sidebar col-xs-2">
