--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,14 @@
     <div class="row">
       <div class="sidebar col-xs-2">
         <ul class="list-unstyled">
+          <% if current_user %>
+            <li><%= link_to "Logout", destroy_user_session_path, method: :delete,
+                            class: 'btn btn-warning' %></li>
+          <% else %>
+             <li><%= link_to "Login", new_user_session_path, class: 'btn btn-success' %>
+          <% end %>
           <li><%= link_to "Blarg", posts_path, class: 'btn btn-info' %></li>
-          <li><%= link_to "Add New Post", posts_new_path, class: 'btn btn-success' %></li>
+          <li><%= link_to "Add New Post", posts_new_path, class: 'btn btn-info' %></li>
         </ul>
       </div>
       <div class="main-content col-xs-10">
