--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,3 +8,7 @@
         data: { confirm: "Are you sure you want to delete this beautiful piece of writing?"} %>
   <% end %>
 </div>
+
+<div class="comments">
+  <%= render partial: "comments/form", locals: { post: @post } %>
+</div>
