Display comments on posts.

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -3,7 +3,7 @@
     <div class="form-group">
       <%= label_tag(:body, "Comment: ") %>
       <br/>
-      <%= text_area_tag(:body, nil, rows: 40, cols: 40) %>
+      <%= text_area_tag(:body, nil, cols: 40, rows: 10) %>
     </div>
 
     <%= submit_tag 'Add Comment', class: 'btn btn-info' %>
