--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,6 +1,14 @@
 <div class="post">
   <h2><%= link_to_unless_current post.title, post_path(post) %></h2>
   <h3>Written on: <%= post.written_at %></h3>
+  <% unless post.tags.count.zero? %>
+    <h3>
+      Tagged as:
+        <% post.tags.map do |tag| %>
+          <%= link_to tag.name, tagged_posts_path(tag.name) %>,
+        <% end %>
+    </h3>
+  <% end %>
 
   <%= simple_format(post.content) %>
 </div>
