Use resources for routing and rip out defunct path helpers.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
              <li><%= link_to "Login", new_user_session_path, class: 'btn btn-success' %>
           <% end %>
           <li><%= link_to "Blarg", posts_path, class: 'btn btn-info' %></li>
-          <li><%= link_to "Add New Post", posts_new_path, class: 'btn btn-info' %></li>
+          <li><%= link_to "Add New Post", new_post_path, class: 'btn btn-info' %></li>
         </ul>
       </div>
       <div class="main-content col-xs-10">
