--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,7 +2,7 @@
 
 <div class="post-nav">
   <% if @post.user == current_user %>
-    <%= link_to "Edit Post", post_edit_path(@post), class: 'btn btn-info' %>
+    <%= link_to "Edit Post", edit_post_path(@post), class: 'btn btn-info' %>
     <%= link_to "Delete Post", post_path(@post), class: 'btn btn-danger',
         method: :delete,
         data: { confirm: "Are you sure you want to delete this beautiful piece of writing?"} %>
