--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([@post, @comment], remote: true) do |f| %>
+<%= form_for([@post, Comment.new], remote: true) do |f| %>
   <div class="form-field">
     <%= f.label "Comment:" %> <br/>
     <%= f.text_area(:body, cols: 40, rows: 10) %>
